fixed padding in block smoothies

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -319,10 +319,11 @@ body {
 	height: 194px;
 
 	background-color: #fff;
+	padding: 40px 0 15px;
 }
 
 .cards__icon {
-	margin: 40px 0 15px;
+	/* margin: 40px 0 15px; */
 }
 
 .cards__desc {
