--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,18 +43,58 @@
 	font-display: swap;
 }
 
+:root {
+	box-sizing: border-box;
+	font-size: calc (0.6em + 1vw);
+}
+
+/* проблема переполнения */
+/* * {
+	outline: solid 1px red;
+} */
 *,
 *::after,
 *::before {
+	box-sizing: inherit;
 	margin: 0;
 	padding: 0;
-	box-sizing: border-box;
 }
 
 body {
 	font-family: Muli, sans-serif;
 	color: #fff;
+	margin: 0;
 }
+
+/*
+♦ Ссылки
+*/
+/* a:link {
+	color: #1476b8;
+	font-weight: bold;
+	text-decoration: none;
+}
+a:visited {
+	color: #1430b8;
+}
+a:hover {
+	text-decoration: underline;
+}
+a:active {
+	color: #b81414;
+} */
+/* .title {
+	color: rgb(59, 45, 180);
+	text-transform: uppercase;
+	font-size: 2.5rem;
+	margin: 0.2em 0;
+} */
+/* 
+@media (max-width: 35em) {
+	.title {
+		font-size: 1.5rem;
+	}
+} */
 
 .header {
 	background: no-repeat center/cover url(../images/header_bg.jpg);
@@ -1184,4 +1224,24 @@ body {
 
 	top: 40px;
 	right: 60px;
+}
+/* создаем медиа запросы */
+/* Extra small devices (phones, 600px and down)  */
+@media only screen and (max-width: 37.5em) {
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 37.5) {
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 48em) {
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 62em) {
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 75em) {
 }
