--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: Muli;
-	src: url("../fonts/Muli-Bold.ttf") format("truetype");
+	src: url("./fonts/Muli-Bold.ttf") format("truetype");
 	font-weight: 700;
 	font-display: swap;
 }
@@ -45,7 +45,7 @@
 
 :root {
 	box-sizing: border-box;
-	font-size: calc (0.6em + 1vw);
+	font-size: calc (0.6em + 1vw); /* 16px */
 }
 
 /* проблема переполнения */
@@ -101,7 +101,7 @@ a:active {
 }
 
 .container {
-	max-width: 108.75em;
+	max-width: 108.75em; /* 1740px */
 	height: 100vh;
 
 	margin: 0 auto;
@@ -114,8 +114,8 @@ a:active {
 	align-items: center;
 	flex-wrap: wrap;
 
-	padding-top: 84px;
-	margin-bottom: 120px;
+	padding-top: 5.25em; /* 84px */
+	margin-bottom: 7.5em; /* 120px */
 
 	position: relative;
 }
@@ -128,12 +128,11 @@ a:active {
 }
 
 .menu__link {
-	font-size: 1rem;
-	line-height: 2.5em;
+	font-size: 1rem; /* 16px */
+	line-height: 2.5em; /* 40px */
 	font-weight: 700;
 	text-transform: uppercase;
-	letter-spacing: 0.02em;
-	color: #fff;
+	letter-spacing: 0.02em; /* 0.32px */
 }
 
 .header__logo {
@@ -151,13 +150,13 @@ a:active {
 	display: flex;
 	align-items: center;
 	flex-wrap: wrap;
-	width: 26.25em;
+	width: 26.25em; /* 420px */
 }
 
 .header__personal {
 	position: relative;
 
-	margin-right: 134px;
+	margin-right: 8.375em; /* 134px */
 }
 
 .header__personal::before {
@@ -170,8 +169,8 @@ a:active {
 	top: 10px;
 	left: 205px;
 
-	width: 48px;
-	height: 2px;
+	width: 3em; /*  48px */
+	height: 0.125em; /* 2px */
 
 	background-color: #ffd68f;
 }
@@ -191,7 +190,7 @@ a:active {
 .personal__count {
 	position: absolute;
 
-	font-size: 0.625rem;
+	font-size: 0.625rem; /* 10px */
 	text-transform: uppercase;
 	color: #000;
 
@@ -199,8 +198,8 @@ a:active {
 	justify-content: center;
 	align-items: center;
 
-	width: 1.3125em;
-	height: 1.3125em;
+	width: 2.1em; /* 21px */
+	height: 2.1em; /* 21px */
 
 	background-color: #fff;
 
@@ -223,8 +222,8 @@ a:active {
 }
 
 .social__item {
-	width: 2.375em;
-	height: 2.375em;
+	width: 2.375em; /* 38px */
+	height: 2.375em; /* 38px */
 
 	display: flex;
 	justify-content: center;
@@ -247,8 +246,8 @@ a:active {
 }
 
 .header__btn {
-	font-size: 1.5rem;
-	line-height: 2.5em;
+	font-size: 1.5rem; /* 24px */
+	line-height: 2.5em; /* 40px */
 	letter-spacing: -0.02em;
 	text-transform: capitalize;
 
@@ -259,12 +258,12 @@ a:active {
 	-ms-border-radius: 35px;
 	-o-border-radius: 35px;
 
-	padding: 0px 112px 0 45px;
+	padding: 0px 4.7em 0 1.875em; /* 0 112px 0 45px */
 
 	position: relative;
 
-	width: 11.666em;
-	height: 2.92em;
+	width: 11.666em; /* 280px */
+	height: 2.92em; /* 70px */
 }
 
 .header__btn::before {
@@ -275,15 +274,14 @@ a:active {
 	top: 27px;
 	left: 210px;
 
-	width: 30px;
-	height: 16px;
+	width: 1.25em; /* 30px */
+	height: 0.67em; /* 16px */
 
 	background: no-repeat center/cover url("../images/arrow.png");
 }
 
 .btn {
 	font-weight: 800;
-	color: #fff;
 
 	display: flex;
 	justify-content: center;
@@ -420,12 +418,6 @@ a:active {
 
 	font-size: 55px;
 	line-height: 60px;
-	font-weight: 800;
-	letter-spacing: -0.02em;
-}
-
-.about__title--white {
-	color: #fff;
 }
 
 .about__title--orange {
@@ -1100,7 +1092,7 @@ a:active {
 	width: 498px;
 	height: 63px;
 
-	background-color: #ffffff;
+	background-color: #fff;
 
 	outline: 0;
 	border-style: none;
@@ -1216,7 +1208,6 @@ a:active {
 	line-height: 40px;
 	font-weight: 700;
 	letter-spacing: -0.02em;
-	color: #fff;
 
 	width: 55px;
 	height: 14px;
