--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,7 @@
 *,
 *::after,
 *::before {
-	box-sizing: inherit;
+	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
 }
@@ -107,11 +107,6 @@ a:active {
 	background: no-repeat center url(../images/header_bg.jpg);
 	width: 100%;
 }
-@media (max-width: 768px) {
-	.header__navigation {
-		display: none;
-	}
-}
 
 .container {
 	max-width: 108.75em;
@@ -135,6 +130,11 @@ a:active {
 	justify-content: space-between;
 	align-items: center;
 	flex-wrap: wrap;
+}
+@media (max-width: 768px) {
+	.header__navigation {
+		display: none;
+	}
 }
 .menu__list {
 	display: flex;
