--- a/assets/css/normalize.css
+++ b/assets/css/normalize.css
@@ -188,7 +188,10 @@ img {
  * 1. Change the font styles in all browsers.
  * 2. Remove the margin in Firefox and Safari.
  */
-
+button {
+  background-color: transparent;
+  border: none;
+}
 button,
 input,
 optgroup,
