header adaptive in media 768px and 1440px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,7 +45,7 @@
 
 :root {
 	box-sizing: border-box;
-	font-size: calc (0.6em + 1vw);
+	font-size: 62.5%;
 	/* 16px */
 }
 
@@ -112,18 +112,18 @@ a:active {
 }
 
 .container {
-	max-width: 108.75em;
+	max-width: 174rem;
 	/* 1740px */
 	height: 100vh;
 
 	margin: 0 auto;
-	padding: 0 10px 0 10px;
+	padding: 0 1em;
 }
 
 .header__top {
-	padding-top: 5.25em;
+	padding-top: 8.4rem;
 	/* 84px */
-	margin-bottom: 7.5em;
+	margin-bottom: 12rem;
 	/* 120px */
 
 	position: relative;
@@ -133,10 +133,29 @@ a:active {
 	justify-content: space-between;
 	align-items: center;
 	flex-wrap: wrap;
+	z-index: 1;
+	width: 100%;
 }
 @media (max-width: 768px) {
 	.header__navigation {
 		display: none;
+	}
+	.active {
+		position: fixed;
+
+		left: 0;
+		top: 0;
+		right: 0;
+		bottom: 0;
+
+		z-index: 1;
+
+		background-color: #12c37c;
+
+		display: flex;
+		flex-direction: column-reverse;
+		justify-content: flex-end;
+		align-items: center;
 	}
 }
 .menu__list {
@@ -145,11 +164,33 @@ a:active {
 	align-items: center;
 	flex-wrap: wrap;
 }
-.menu__item + .menu__item {
-	margin-left: 2em;
+@media (max-width: 768px) {
+	.menu__list {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+
+		height: 50rem;
+		/* 500px */
+	}
 }
+.menu__item + .menu__item {
+	margin-left: 3.3rem;
+	/* 33px */
+}
+@media (max-width: 1440px) {
+	.menu__item + .menu__item {
+		margin-left: 2.5rem;
+	}
+}
+@media (max-width: 768px) {
+	.menu__item + .menu__item {
+		margin-left: 0;
+	}
+}
+
 .menu__link {
-	font-size: 1rem;
+	font-size: 1.6rem;
 	/* 16px */
 	line-height: 2.5em;
 	/* 40px */
@@ -158,22 +199,36 @@ a:active {
 	letter-spacing: 0.02em;
 	/* 0.32px */
 }
+@media (max-width: 768px) {
+	.menu__link {
+		font-size: 2rem;
+		/* 20px */
+	}
+}
 .header__right-block {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	flex-wrap: wrap;
-	width: 26.25em;
+	width: 42rem;
 	/* 420px */
 }
-
+@media (max-width: 768px) {
+	.header__right-block {
+		margin: 10rem 0 15rem;
+	}
+}
 .header__personal {
 	position: relative;
 
-	margin-right: 8.375em;
+	margin-right: 13.4rem;
 	/* 134px */
 }
-
+@media (max-width: 1440px) {
+	.header__personal {
+		margin-right: 10rem;
+	}
+}
 .header__personal::before {
 	position: absolute;
 
@@ -184,14 +239,18 @@ a:active {
 	top: 10px;
 	left: 205px;
 
-	width: 3em;
+	width: 4.8rem;
 	/*  48px */
-	height: 0.125em;
+	height: 0.2rem;
 	/* 2px */
 
 	background-color: #ffd68f;
 }
-
+@media (max-width: 1440px) {
+	.header__personal::before {
+		display: none;
+	}
+}
 .personal__list {
 	display: flex;
 	justify-content: space-between;
@@ -199,7 +258,12 @@ a:active {
 	flex-wrap: wrap;
 }
 .personal__item + .personal__item {
-	margin-left: 45px;
+	margin-left: 4.5rem;
+}
+@media (max-width: 1440px) {
+	.personal__item + .personal__item {
+		margin-left: 3.8rem;
+	}
 }
 .personal__link--cart {
 	position: relative;
@@ -208,7 +272,7 @@ a:active {
 .personal__count {
 	position: absolute;
 
-	font-size: 0.625rem;
+	font-size: 1rem;
 	/* 10px */
 	text-transform: uppercase;
 	color: #000;
@@ -217,9 +281,9 @@ a:active {
 	justify-content: center;
 	align-items: center;
 
-	width: 2.1em;
+	width: 2.1rem;
 	/* 21px */
-	height: 2.1em;
+	height: 2.1rem;
 	/* 21px */
 
 	background-color: #fff;
@@ -242,9 +306,9 @@ a:active {
 }
 
 .social__item {
-	width: 2.375em;
+	width: 3.8rem;
 	/* 38px */
-	height: 2.375em;
+	height: 3.8rem;
 	/* 38px */
 
 	display: flex;
@@ -260,9 +324,13 @@ a:active {
 	-o-border-radius: 50%;
 }
 .social__item + .social__item {
-	margin-left: 0.5em;
+	margin-left: 0.8rem;
 }
-
+@media (max-width: 1440px) {
+	.social__item + .social__item {
+		margin-left: 0.6rem;
+	}
+}
 .header__logo {
 	position: absolute;
 	top: 50%;
@@ -273,11 +341,22 @@ a:active {
 	-ms-transform: translateX(-50%);
 	-o-transform: translateX(-50%);
 }
+@media (max-width: 768px) {
+	.header__logo {
+		display: none;
+	}
+}
+@media (max-width: 800px) {
+	.logo__img {
+		width: 250px;
+	}
+}
 .header__burger-btn {
 	display: none;
-	position: absolute;
+	position: fixed;
 	top: 1.8em;
 	right: 2em;
+	z-index: 1;
 }
 @media (max-width: 768px) {
 	.header__burger-btn {
@@ -285,7 +364,7 @@ a:active {
 	}
 }
 .header__burger-img {
-	width: 2.5em;
+	width: 4rem;
 }
 
 .header__content {
@@ -295,13 +374,14 @@ a:active {
 	align-items: center;
 }
 .title {
-	font-size: 3.125rem;
+	font-size: 5rem;
+	/* 50px */
 	line-height: 0.8em;
 	font-weight: 800;
 	letter-spacing: -0.02em;
 }
 .header__btn {
-	font-size: 1.5rem;
+	font-size: 2.4rem;
 	/* 24px */
 	line-height: 2.5em;
 	/* 40px */
@@ -320,9 +400,9 @@ a:active {
 
 	position: relative;
 
-	width: 11.666em;
+	width: 28rem;
 	/* 280px */
-	height: 2.92em;
+	height: 7rem;
 	/* 70px */
 }
 
@@ -334,9 +414,9 @@ a:active {
 	top: 27px;
 	left: 210px;
 
-	width: 1.25em;
+	width: 3rem;
 	/* 30px */
-	height: 0.67em;
+	height: 16rem;
 	/* 16px */
 
 	background: no-repeat center/cover url("../images/arrow.png");
@@ -353,7 +433,9 @@ a:active {
 .btn--green {
 	background-color: #0aa566;
 }
-
+.btn--green:hover {
+	background-color: #12c37c;
+}
 /* header */
 
 /* smoothies */
